Changelog
=========

This document describes changes between each past release. For information
about future releases, check `milestones`_ and :doc:`/about/vision`.


0.3 (unreleased)
----------------

- Add refuse comment backend method with the adobe events client method


0.2 (2018-08-07)
----------------

- Improve Demo website UI

BREAKING CHANGES:

- Use django anysign field: signature_backend_id from signer
- Enhance exceptions management
- Use model imposed by third party (compliance) for document
- Make `refresh_token` a static method



0.1 (2018-07-27)
----------------

- First release.